[package]
name = "derive-box-dyn"
version = "0.1.1"
edition = "2021"
exclude = ["/.github/", ".*", "/tests/"]
license-file = "./LICENSE"
description = "Proc macro to convert struct to Box<dyn T>"
license = "Apache-2.0"
repository = "https://github.com/fhke/derive-box-dyn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.53", features = ["full"] }


[lib]
proc-macro = true
